# qtz-security

./: .gitignore  CMakeLists.txt  QtzSecurity.pc.in  QtzSecurity.rc  authentication-source.hpp  authenticator.cpp  authenticator.hpp  crypto.cpp  crypto.hpp  security.pro  simple-authenticator.cpp  simple-authenticator.hpp  username.hpp
cmake/: QtzSecurityConfig.cmake
include/: authorizer.hpp  crypto.hpp  identity.hpp  key-ring.hpp  password.hpp  qtz-security.hpp  simple-authenticator.hpp  virtual-machine-detector.hpp
lib/: CMakeLists.txt
lib/cmake/: QtzSecurityConfig.cmake
lib/include/: authentication-source.hpp  authenticator.hpp  authorizer.hpp  basic-authenticator.hpp  crypto.hpp  identity.hpp  key-ring.hpp  license-manager.hpp  password.hpp  qtz-security.hpp  token.hpp  unique-machine-id.hpp  username.hpp  virtual-machine-detector.hpp
lib/src/: authenticator.cpp  authorizer.cpp  basic-authenticator.cpp  crypto.cpp  identity.cpp  key-ring.cpp  license-manager.cpp  password.cpp  token.cpp  unique-machine-id.cpp  username.cpp
src/: authentication-source.cpp  authorizer.cpp  crypto.cpp  username.cpp  virtual-machine-detector.cpp
test/: CMakeLists.txt  generate-data.ps1  generate-data.sh  tst_decrypt.cpp  tst_encrypt.cpp  tst_sign.cpp  tst_verify.cpp
